--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		     W: Accelerate    S: Decelerate    A: Rotate CCW    D: Rotate CW    F: Hyperspace <br>
+		    Space: Shoot (not working)
 	    </footer>
 	</body>
 </html>
