--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 				</canvas>
 		    </section>
 	    <footer>
-		     W: Accelerate    S: Decelerate    A: Rotate CCW    D: Rotate CW    H: Hyperspace <br>
-		    Space: Shoot (not working)
+		     W: Forward    S: Backward    A: Turn Left    D: Turn RIght    H: Hyperspace 
+		   
 	    </footer>
 	</body>
 </html>
