--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 			<h1>Asteroids</h1>
 		</header>
 			<section id="content">
-				<canvas id="AsteroidsGame" data-processing-sources="Asteroid.pde AsteroidsGame.pde Floater.pde Spaceship.pde Star.pde"> </canvas>
+				<canvas id="AsteroidsGame" data-processing-sources="Asteroid.pde Bullet.pde AsteroidsGame.pde Floater.pde Spaceship.pde Star.pde"> </canvas>
 		    </section>
 	    <footer>
-		     W: Forward    S: Backward    A: Turn Left    D: Turn RIght    H: Hyperspace 
+		     W: Forward    S: Backward    A: Turn Left    D: Turn RIght    H: Hyperspace Space: Shoot
 		   
 	    </footer>
 	</body>
